--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:id="@+id/main_root">
+    android:id="@+id/main_root"
+    android:background="@color/grey">
 
     <Button
         android:id="@+id/button"
@@ -24,7 +25,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/login" />
+        android:src="@drawable/login"/>
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
